--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -15,6 +15,7 @@ stages:
          cancelTimeoutInMinutes: 2
          displayName: "This ia a single job Demo"
          condition: failed()
+         dependsOn: []
          steps:
            - bash: echo "A"
 
